# CompSim2

./: .gitignore  CMakeLists.txt  README.md
doc/: doc.tex  ref.bib
document/: .~lock.presentation.odp#  doc.tex  doc.tex.bak  ref.bib
document/figs/: gaussian0191.tif
python/: 1d.py  2d.py  coefficients.py  images.py  playground.py  timePlot.py
src/: 1d64-32laplace.cpp  2dlaplacetest.cpp  Utils.hpp  timeEvolution.cpp
